<resources>
    <string name="app_name" translatable="false">Flavordex</string>
    <string name="date_format" translatable="false">MMM dd, yyyy</string>
    <string name="date_time_format" translatable="false">MMM dd, yyyy h:mm a</string>
    <string name="api_url" translatable="false">https://flavordex.ultramegasoft.com/api/v1</string>
    <string name="api_url_debug" translatable="false">https://10.0.2.2/flavordex_api/v1</string>
    <string name="user_agent" translatable="false">Flavordex/%s (Linux; Android)</string>
    <string name="ext_csv" translatable="false">.csv</string>
    <string name="cat_num_entries">%1$d %2$s</string>
    <string name="cat_all">All Categories</string>
    <string name="cat_beer">Beer</string>
    <string name="cat_wine">Wine</string>
    <string name="cat_whiskey">Whiskey</string>
    <string name="cat_coffee">Coffee</string>
    <string name="title_error">Error</string>
    <string name="title_add">Add Entry</string>
    <string name="title_add_cat_entry">Add %s Entry</string>
    <string name="title_edit">Edit Entry</string>
    <string name="title_delete_entry">Delete Entry?</string>
    <string name="title_add_entry">Entry Details</string>
    <string name="title_add_photos">Add Photos</string>
    <string name="title_remove_photo">Remove Photo?</string>
    <string name="title_add_flavor">Rate Flavors</string>
    <string name="title_select_cat">Select Category</string>
    <string name="title_create_cat">Create Category</string>
    <string name="title_edit_cat">Edit Category</string>
    <string name="title_delete_cat">Delete Category?</string>
    <string name="title_search">Search Entries</string>
    <string name="title_sort">Sort by…</string>
    <string name="title_categories">Categories</string>
    <string name="title_all_entries">All Entries</string>
    <string name="title_cat_entries">%s Entries</string>
    <string name="title_search_results">Search Results</string>
    <string name="title_permission">Permission Requested</string>
    <string name="title_reset_flavor">Reset Flavor Chart</string>
    <string name="title_export">Export Entries</string>
    <string name="title_select_file">Select File</string>
    <string name="title_import">Import Entries</string>
    <string name="title_import_app">Import from Flavordex</string>
    <string name="title_importing">Importing…</string>
    <string name="title_exporting">Exporting…</string>
    <string name="title_duplicates">Duplicates Detected</string>
    <string name="title_unshare_entry">Un-share Entry?</string>
    <string name="title_settings">Application Settings</string>
    <string name="title_login">Log in…</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_account">Edit Account</string>
    <string name="title_about">About Flavordex</string>
    <string name="header_details">Details</string>
    <string name="header_rating">Rating</string>
    <string name="header_notes">Notes</string>
    <string name="header_entry_title">Entry Title</string>
    <string name="header_cat_fields">Category Fields</string>
    <string name="header_cat_flavors">Category Flavors</string>
    <string name="header_cat_title">Category Title</string>
    <string name="header_select_app">Select %s</string>
    <string name="header_email">Email Address</string>
    <string name="header_password">Password</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort List</string>
    <string name="menu_sort_name">Name</string>
    <string name="menu_sort_date">Date</string>
    <string name="menu_sort_rating">Rating</string>
    <string name="menu_add_cat">Create Category</string>
    <string name="menu_add_entry">Add Entry</string>
    <string name="menu_edit_entry">Edit Entry</string>
    <string name="menu_save_entry">Save Entry</string>
    <string name="menu_delete_entry">Delete Entry</string>
    <string name="menu_share_entry">Share Entry</string>
    <string name="menu_unshare_entry">Un-share Entry</string>
    <string name="menu_add_photo">Add Photo</string>
    <string name="menu_select_photo">Select Photo</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="menu_remove_photo">Remove Photo</string>
    <string name="menu_edit_flavor">Edit Flavors</string>
    <string name="menu_reset_flavor">Reset Flavors</string>
    <string name="menu_save_cat">Save Category</string>
    <string name="menu_edit_cat">Edit Category</string>
    <string name="menu_delete_cat">Delete Category</string>
    <string name="menu_xport">Import/Export</string>
    <string name="menu_import">Import from CSV</string>
    <string name="menu_import_app">Import from Flavordex</string>
    <string name="menu_export">Export to CSV</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_check_all">Check All</string>
    <string name="menu_uncheck_all">Uncheck All</string>
    <string name="menu_export_selected">Export</string>
    <string name="menu_settings">Application Settings</string>
    <string name="menu_about">About</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_clear">Clear</string>
    <string name="button_undo">Undo</string>
    <string name="button_add_photo">Add Photo</string>
    <string name="button_select_photo">Add From Gallery</string>
    <string name="button_take_photo">Add From Camera</string>
    <string name="button_remove_photo">Remove Photo</string>
    <string name="button_locate_photo">Locate Photo…</string>
    <string name="button_create_cat">Create Category</string>
    <string name="button_add_extra">Add Field</string>
    <string name="button_add_flavor">Add Flavor</string>
    <string name="button_remove_extra">Remove Field</string>
    <string name="button_remove_flavor">Remove Flavor</string>
    <string name="button_select_dir">Select Directory</string>
    <string name="button_ignore">Ignore</string>
    <string name="button_uncheck_duplicates">Uncheck %s</string>
    <string name="button_import">Import Selected</string>
    <string name="button_export">Export</string>
    <string name="button_grant_permission">Grant Permission</string>
    <string name="button_search">Search Entries</string>
    <string name="button_email">Login with email address</string>
    <string name="button_login">Login</string>
    <string name="button_register">Create Account</string>
    <string name="button_reset_password">Forgot password?</string>
    <string name="button_change_email">Change Email</string>
    <string name="button_change_password">Change Password</string>
    <string name="hint_empty" translatable="false">\?</string>
    <string name="hint_entry_title">Entry Title</string>
    <string name="hint_cat_name">Category Name</string>
    <string name="hint_maker">Maker</string>
    <string name="hint_origin">Origin</string>
    <string name="hint_price">Price</string>
    <string name="hint_location">Where are you?</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_location_filter">Tasting Location</string>
    <string name="hint_file_name">File Name</string>
    <string name="hint_extra_name">Field Name</string>
    <string name="hint_flavor_name">Flavor Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="label_cat">Category: </string>
    <string name="label_title">Title: </string>
    <string name="label_maker">Maker: </string>
    <string name="label_origin">Origin: </string>
    <string name="label_price">Price: </string>
    <string name="label_tasted">Tasted: </string>
    <string name="label_location">Location: </string>
    <string name="label_date">Date/Time: </string>
    <string name="label_date_min">After Date: </string>
    <string name="label_date_max">Before Date: </string>
    <string name="label_min">Minimum: </string>
    <string name="label_max">Maximum: </string>
    <string name="label_field">%s: </string>
    <string name="field_entry_title">Entry Title</string>
    <string name="field_maker">Maker</string>
    <string name="field_origin">Origin</string>
    <string name="field_price">Price</string>
    <string name="field_location">Tasting Location</string>
    <string name="field_date">Date/Time</string>
    <string name="message_no_data">No entries found.</string>
    <string name="message_no_data_filter">No entries found matching your query.</string>
    <string name="message_confirm_delete">Are you sure you want to delete &lt;b>%s&lt;/b>?</string>
    <string name="message_confirm_delete_cat">Are you sure you want to delete the &lt;b>%s&lt;/b> category?</string>
    <string name="message_delete_cat_entries">Delete &lt;b>%1$d %2$s&lt;/b> from this category.</string>
    <string name="message_confirm_remove_photo">Are you sure you want to remove this photo? The file will &lt;i>not&lt;/i> be deleted.</string>
    <string name="message_no_photos">No Photos</string>
    <string name="message_no_media">External storage not available</string>
    <string name="message_photo_not_found">Photo not found</string>
    <string name="message_import_no_data">No valid entries were found.</string>
    <string name="message_empty_dir">No files found.</string>
    <string name="message_empty_dir_filtered">No %s files found.</string>
    <string name="message_import_complete">Import complete.</string>
    <string name="message_export_complete">Export complete.</string>
    <string name="message_app_requires_update">%s (requires update)</string>
    <string name="message_duplicates_unchecked">%1$d %2$s %3$s unchecked.</string>
    <string name="message_duplicates_detected">%1$d %2$s %3$s detected. What would you like to do?</string>
    <string name="message_request_storage">Flavordex requires external storage access to enable photo features.</string>
    <string name="message_request_storage_xport">Flavordex requires external storage access to enable CSV file importing and exporting.</string>
    <string name="message_copyright">Copyright © %d UltraMega Software</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_edit_cats">Edit Categories</string>
    <string name="pref_summary_edit_cats">Add, remove, or customize entry categories.</string>
    <string name="pref_detect_location">Remember Locations</string>
    <string name="pref_summary_detect_location">Auto-fill location name based on previous entries.</string>
    <string name="pref_cat_sync">Synchronization</string>
    <string name="pref_account">Account</string>
    <string name="pref_summary_account_off">Log in…</string>
    <string name="pref_edit_account">Edit Account</string>
    <string name="pref_summary_edit_account">Change your email address or password.</string>
    <string name="pref_sync_data">Sync Journal Data</string>
    <string name="pref_summary_sync_data">Sync journal data across your logged in devices.</string>
    <string name="pref_sync_photos">Sync Entry Photos</string>
    <string name="pref_summary_sync_photos">Sync entry photos via your Google Drive account.</string>
    <string name="pref_sync_photos_unmetered">Unmetered Photo Sync</string>
    <string name="pref_summary_sync_photos_unmetered">Only sync photos when connected to an unmetered connection.</string>
    <string name="about_website_url" translatable="false">http://flavordex.com/</string>
    <string name="about_email" translatable="false">flavordex@ultramegasoft.com</string>
    <string name="about_version">Version: </string>
    <string name="about_support">Support: </string>
    <string name="about_website">Website: </string>
    <string name="about_gms">Google Play Services Legal Notice</string>
</resources>