<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="?attr/dialogPreferredPadding"
    android:paddingRight="?attr/dialogPreferredPadding"
    android:paddingTop="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    style="@style/TableText.Label"
                    android:text="@string/label_cat" />

                <Spinner
                    android:id="@+id/entry_cat"
                    android:prompt="@string/hint_entry_cat" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableText.Label"
                    android:text="@string/label_maker" />

                <EditText
                    android:id="@+id/maker"
                    style="@style/TextInput.Name"
                    android:hint="@string/hint_maker" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableText.Label"
                    android:text="@string/label_origin" />

                <EditText
                    android:id="@+id/origin"
                    style="@style/TextInput.Name"
                    android:hint="@string/hint_origin" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableText.Label"
                    android:text="@string/label_location" />

                <EditText
                    android:id="@+id/location"
                    style="@style/TextInput.Name"
                    android:hint="@string/hint_location_filter" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/SubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_date" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    style="@style/TableText.Label"
                    android:text="@string/label_date_min" />

                <Button android:id="@+id/button_date_min" />

                <ImageButton
                    android:id="@+id/button_date_min_clear"
                    android:contentDescription="@string/button_clear"
                    android:src="@drawable/ic_clear" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableText.Label"
                    android:text="@string/label_date_max" />

                <Button android:id="@+id/button_date_max" />

                <ImageButton
                    android:id="@+id/button_date_max_clear"
                    android:contentDescription="@string/button_clear"
                    android:src="@drawable/ic_clear" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
