<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/form_padding">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxWidth="@dimen/form_width"
        android:minWidth="@dimen/form_width"
        android:orientation="horizontal">

        <TextView
            style="@style/TableText.Label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_cat_title" />

        <EditText
            android:id="@+id/cat_name"
            style="@style/TextInput.Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_cat_name" />
    </LinearLayout>

    <TextView
        style="@style/SubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_cat_fields" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxWidth="@dimen/form_width"
        android:minWidth="@dimen/form_width"
        android:orientation="vertical">

        <TextView
            style="@style/FieldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_entry_title" />

        <TextView
            style="@style/FieldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_maker" />

        <TextView
            style="@style/FieldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_origin" />

        <TextView
            style="@style/FieldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_price" />

        <TextView
            style="@style/FieldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_location" />
    </LinearLayout>

    <include layout="@layout/edit_cat_foot" />
</LinearLayout>
