<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add_photo"
        android:enabled="false"
        android:icon="@drawable/ic_add_to_photos"
        android:title="@string/menu_add_photo"
        android:visible="false"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/menu_take_photo"
                android:enabled="false"
                android:icon="@drawable/ic_photo_camera"
                android:title="@string/menu_take_photo" />
            <item
                android:id="@+id/menu_select_photo"
                android:enabled="false"
                android:icon="@drawable/ic_photo_library"
                android:title="@string/menu_select_photo" />
        </menu>
    </item>
</menu>
